--- a/index.html
+++ b/index.html
@@ -94,14 +94,10 @@
         <hr / class="w-25 m-auto">
       </div>
       <div class="row ">
-        <p data-aos="fade-down" class="p-2 me-auto mb-2 mb-lg-0  fs-4 text-center ">Lorem ipsum dolor sit amet
-          consectetur adipisicing elit. Quis, maxime officiis nobis unde accusamus incidunt fugit ducimus earum omnis
-          sequi beatae consequuntur sunt, iusto, iure quas repellendus veniam voluptatem voluptates. Provident itaque
-          culpa atque nam voluptas. Nisi, dolore?
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur eligendi hic omnis, quae harum tempore
-          dolorum reprehenderit numquam quisquam, accusamus molestiae, nisi ratione praesentium aperiam nam magnam
-          facere architecto quidem. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis magnam omnis
-          officia voluptas ipsa repudiandae saepe id minus?
+        <p data-aos="fade-down" class="p-2 me-auto mb-2 mb-lg-0  fs-4 text-center ">Sparks-donate exists to alleviate poverty by enabling the world to give. Established in 2000,
+          it is the largest and the most trusted giving platform in India. It enables individuals and organizations to raise and donate funds conveniently to any cause they care about,
+          with offerings including crowdfunding, corporate giving, cause marketing, and philanthropy consulting. Our community of 2M+ donors and 250+ partners
+          have supported 2,200+ verified nonprofits, serving 15M+ people across the country.
         </p>
       </div>
     </div>
